2014-09-18  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Dot not allow to create delete-on-destroy GMainLoopSources
        https://bugs.webkit.org/show_bug.cgi?id=136923

        Reviewed by Gustavo Noronha Silva.

        * TestWebKitAPI/Tests/WTF/gobject/GMainLoopSource.cpp:
        (TestWebKitAPI::TEST): Use the new API that doesn't allow to use
        the source.

2014-09-18  Csaba Osztrogonác  <ossy@webkit.org>

        Fix countFailures of RunLLINTCLoopTests and Run32bitJSCTests (II)
        https://bugs.webkit.org/show_bug.cgi?id=136856

        Reviewed by Darin Adler.

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:
        (RunLLINTCLoopTests.countFailures):
        (Run32bitJSCTests.countFailures):
        * BuildSlaveSupport/build.webkit.org-config/mastercfg_unittest.py:
        (RunLLINTCLoopTestsTest.test_failures):
        (RunLLINTCLoopTestsTest.test_failure):
        (RunLLINTCLoopTestsTest.test_no_failure):
        (Run32bitJSCTestsTest.test_failures):
        (Run32bitJSCTestsTest.test_failure):
        (Run32bitJSCTestsTest.test_no_failure):

2014-09-18  Zan Dobersek  <zdobersek@igalia.com>

        GMainLoopSource is exposed to race conditions
        https://bugs.webkit.org/show_bug.cgi?id=135800

        Reviewed by Carlos Garcia Campos.

        Add unit tests for GMainLoopSource.

        The tests check correct behavior of GMainLoopSource in various conditions --
        from the most simple rescheduling to rescheduling during dispatch, cancelling
        or destroying the GMainLoopSource during dispatch, proper destroy callback
        dispatching etc.

        Scheduling both void (one-time) and bool (repeatable) callbacks is tested.
        State of the GMainLoopSource object (either ready, sheduled or active) is
        thoroughly tested throughout the lifetime of that object.

        Still missing are tests for socket callbacks, which are a bit trickier because