@@ -1,3 +1,13 @@
+2014-09-18  Tanay C  <tanay.c@samsung.com>
+
+        [EFL][WK2] Minibrowser : Support Zoom on Control key + scroll
+        https://bugs.webkit.org/show_bug.cgi?id=136739
+
+        Reviewed by Gyuyoung Kim.
+
+        * MiniBrowser/efl/main.c: Add support for zoom on control key + mouse scroll
+        (on_mouse_wheel): Modified.
+
 2014-09-18  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] Dot not allow to create delete-on-destroy GMainLoopSources
